# PaddleCustomDevice

./: LICENSE
backends/musa/: CMakeLists.txt  build.sh  setup.py.in
backends/musa/cmake/: paddle.cmake
backends/musa/kernels/: abs_kernel.cc  activation.cc  binary.cc  binary.cpp  bmm..cc  conv.cc  pool2d.cc  softmax.cc
backends/musa/kernels/funcs/: conv_util.h  format_utils.h  npu_enforce.h  npu_funcs.h  npu_op_prepare.h  npu_op_runner.h  slice_utils.h  string_helper.h
backends/musa/kernels/musa/: CMakeLists.txt  array.h  contiguous_kernel.h  contiguous_kernel.mu  conv_kernel.mu  unroll_array_ops.h
backends/musa/runtime/: runtime.cc  runtime.h  utils.cc  utils.h
backends/musa/runtime/mudnn/: DeviceThreadHandles.h  Handle.cc  Handle.h
